@@ -1,1 +1,0 @@
-streamtuner-live365 is a Live365 plugin for streamtuner.
