@@ -1,3 +1,0 @@
-@comment $NetBSD: PLIST,v 1.3 2004/09/22 08:09:17 jlam Exp $
-lib/streamtuner/plugins/live365.la
-${PKGLOCALEDIR}/locale/fr/LC_MESSAGES/streamtuner-live365.mo
