@@ -1,4 +1,0 @@
-$NetBSD: distinfo,v 1.2 2004/03/30 22:42:47 xtraeme Exp $
-
-SHA1 (streamtuner-local-0.4.0.tar.gz) = efd5b1c0f791991cc69c62c69037666b63dfd5f1
-Size (streamtuner-local-0.4.0.tar.gz) = 320955 bytes
